--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>If you see this, it means your site works 🎉</p>
+  <h1>Welcome to My Website 🚀</h1>
+  <p>Select a page:</p>
+  <ul>
+    <li><a href="signup.html">Sign Up</a></li>
+    <li><a href="ForgotPass.html">Forgot Password</a></li>
+    <li><a href="overflow.html">Overflow Page</a></li>
+  </ul>
 </body>
 </html>
