--- a/ForgotPass.html
+++ b/ForgotPass.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Fritz Forgot Password
         </title>
@@ -19,4 +20,5 @@
             </form>
         </div>
     </body>
+
 </html>
