--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="signup.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="container">
@@ -115,4 +116,5 @@
             </form>
         </div>
     </body>
+
 </html>
